--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button>Click me!</button>
 
       <div id="appendDiv"></div>
-
+      <footer>Priscilla Gyamfi &copy </footer>
   </body>
 
 </html>
